--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,41 @@
 .sendForm {
+    /*position: relative;*/
+    top: 379px;
+    left: 90px;
 
 }
 
 .textarea {
-
+    border: 1px solid #D1D1D1;
+    padding: 10px;
+    min-width: 960px;
+    max-width: 960px;
+    max-height: 40px;
+    min-height: 40px;
+    background: #F5F7FB;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 20px;
 }
 
 .button {
-
+    color: #FFFFFF;
+    background: #0066CC;
+    border-radius: 20px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    width: 120px;
+    height: 40px;
+    border: none;
+    position: absolute;
+    left: 1050px
 }
 
 .button:hover {
 
 }
+
 .button:active {
 
 }
