--- a/src/s2-homeworks/hw02/affairs/Affairs.module.css
+++ b/src/s2-homeworks/hw02/affairs/Affairs.module.css
@@ -1,10 +1,12 @@
 .buttonContainer {
     display: flex;
-    gap: 24px;
+    gap: 34px;
     margin-bottom: 32px;
+    margin-top: 32px;
 }
 
 .all {
+
     --color: #06c;
 }
 
