--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,35 +1,81 @@
 .greetingForm {
+    /*position: relative;*/
+    /*top: 994px;*/
 }
 
 .inputAndButtonContainer {
+    position: relative;
+    left: 50px
 }
 
 .error {
+    color: red;
+
 }
 
 .input {
+    padding: 10px;
+    width: 372px;
+    height: 36px;
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
+
 }
 
 .input:focus {
+    border: none;
+    background-color: #D1D1D1;
+
+
 }
 
 .errorInput {
+    width: 372px;
+    height: 36px;
+    border: red 1px solid;
+    border-radius: 5px;
 }
 
 .button {
+    width: 78px;
+    height: 36px;
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    position: absolute;
+    left: 390px;
+    top: 0px;
+    background: #0066CC;
+    color: #FFFFFF;
+    border-radius: 3px;
 }
 
 .button:focus {
+    border: none;
 }
 
 .button:active {
+    border: none;
 }
 
 .button:disabled {
+    border: none;
 }
 
 .text {
+
+
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    display: inline;
 }
 
 .greeting {
+    /*position: relative;*/
+    /*top: 20px;*/
+    /*left: 50px;*/
 }
