--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,24 @@
 .burgerMenuIcon {
+    padding-left: 73px;
+    padding-top: 18px;
 }
 
 .header {
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 60px;
+    box-shadow: 0 5px 10px lightgray;
+
 }
 
 .header h1 {
+}
+
+.pageName {
+    position: fixed;
+    top: 15px;
+    left: 1132px;
+    font-family: Montserrat, sans-serif;
+    font-size: 24px;
+
 }
