--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,74 @@
+.wrapper {
+
+}
+
 .sidebar {
+    text-align: center;
+    left: 0;
+    height: 100%;
+    /*width: 317px;*/
+    position: absolute;
+    background: #ffffff;
+    transition: 0.5s;
+    z-index: 110;
 }
 
 .sidebar.open {
+    left: 0;
+    height: 100%;
+    width: 265px;
+    position: fixed;
+    background: #ffffff;
+    transition: 0.5s;
 }
 
 .background {
+    position: fixed;
+    top: auto;
+    left: auto;
+    background-color: #000000;
+    width: 100%;
+    height: 100%;
+    opacity: 30%;
+    z-index: 100;
 }
 
 .nav {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 35px;
 }
 
-.nav a {
+.def {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
 }
 
-.nav a:hover {
+.active {
+
+    text-decoration: underline;
+    font-size: 22px;
+    color: #0059B2;
+
 }
 
-.nav a.active {
+.active:hover {
+
 }
+
+.def:hover {
+    font-size: 22px;
+    color: #0059B2;
+    opacity: 50%;
+}
+
 .close {
+    background-color: #FFFFFF;
+    border: none;
 }
 
 .close img {
+    padding-left: 220px;
 }
