--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,20 @@
 .select {
+    width: 180px;
+    height: 24px;
+    border: 1px solid #C2C2C2;
+    border-radius: 2px;
+    box-shadow: none;
+
 }
 
 .select:focus {
+    box-shadow: none;
+    /*border: none;*/
 }
 
 
 .option:hover {
+    box-shadow: none;
+    /*border: none*/
 }
+
