--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -5,4 +5,10 @@
 }
 
 .number {
+    font-size: 16px;
+    font-weight: bold;
+    vertical-align: super;
+    /*line-height: 20px;*/
+    /*line-height: 103%;*/
+    padding: 20px;
 }
