--- a/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
+++ b/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
@@ -1,11 +1,14 @@
 .pagination {
     display: flex;
+    margin-bottom: 7px;
+
 }
 
 .text1 {
-
+    padding-right: 10px;
 }
 
 .text2 {
-
+    padding-left: 10px;
 }
+
